<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JxClient</string>
    <string name="server">服务器地址</string>
    <string name="port">端口</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_error">用户名密码错误</string>
    <string name="server_error">无法连接至服务器。请检查服务器地址,端口号及网络配置</string>
    <string name="save_setting">保存设置</string>
	<string name="invalid_inf">请填写完整登录信息</string>
	<string name="signing_in">登录中...</string>
	<string name="error_get_list">获取监控点列表出错</string>
	<string name="select_spot">选择监控点</string>
	<string name="loading_spots">正在获取监控点列表</string>
	<string name="showOnline">在线监控点</string>
	<string name="showAll">所有监控点</string>
	<string name="loading_spot">正在连接视频</string>
	<string name="confirmExit">确定要退出吗?</string>
	<string name="sure">是</string>
	<string name="cancel">取消</string>
</resources>
