<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_margin="10dip"
        >
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/server"
                  android:layout_width="80dip"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"/>
        <com.smartvision.JxClient.MyEditText android:id="@+id/server"
                  android:singleLine="true"
                  android:layout_width="fill_parent"
                  style="@style/editText"
                  android:inputType="numberDecimal"
                  android:digits="1234567890.:"
                  android:hint="@string/server"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
	<LinearLayout android:orientation="horizontal"
	              android:layout_height="wrap_content"
	              android:layout_width="fill_parent">
		<TextView android:text="@string/port"
		          android:layout_width="80dip"
		          android:layout_height="wrap_content"
		          android:gravity="right"
		          android:layout_marginRight="5dip"/>
		<com.smartvision.JxClient.MyEditText android:id="@+id/port"
		          android:singleLine="true"
		          android:layout_width="fill_parent"
		          style="@style/editText"
		          android:inputType="numberDecimal"
		          android:digits="1234567890"
		          android:hint="@string/port"
		          android:text="80"
		          android:layout_height="wrap_content"/>
	</LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/username"
                  android:layout_width="80dip"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"/>
        <com.smartvision.JxClient.MyEditText android:id="@+id/username"
                  android:hint="@string/username"
                  android:singleLine="true"
                  android:layout_width="fill_parent"
                  style="@style/editText"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/passwd"
                  android:layout_width="80dip"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"/>
        <com.smartvision.JxClient.MyEditText android:id="@+id/passwd"
                  android:password="true"
                  android:singleLine="true"
                  android:layout_width="fill_parent"
                  style="@style/editText"
                  android:hint="@string/passwd"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dip"
                  android:layout_width="fill_parent">
	    <CheckBox android:id="@+id/save_setting"
	              android:text="@string/save_setting"
	              android:layout_height="wrap_content"
	              android:layout_width="wrap_content"
	              android:layout_marginLeft="80dip"
	              />
	    <TextView android:text=""
	              android:layout_height="wrap_content"
	              android:layout_width="wrap_content"
	              android:layout_weight="1"/>
		<Button android:text="@string/sign_in"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:id="@+id/sign_in"/>
	</LinearLayout>
</LinearLayout>

